Fix for Safari collapsing bottom margin.

--- a/web-static/less/style.less
+++ b/web-static/less/style.less
@@ -149,8 +149,9 @@ footer {
   height: 100%;
   margin-top: -34px;
   padding-top: 48px;
-  margin-bottom: 54px;
   width: 100%;
+  overflow: auto;
+  border-bottom: 54px solid transparent;
 }
 
 .webchat-event-inner-wrapper {
